# lls

./: Cargo.toml  README  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: help.txt  main.rs  options.rs  procs.rs  sockets_procfs.rs  termtree.rs
src/netlink/: mod.rs  route.rs  sock.rs  wg.rs
