[package]
name = "lls"
description = "list listening sockets"
version = "0.2.1"
edition = "2021"
authors = ["Julius Michaelis <gitter@liftm.de>"]
repository = "https://github.com/jcaesar/lls"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["listening", "socket", "linux", "cli"]
readme = "README.md"

[dependencies]
anstyle = "1.0.4"
anyhow = "1.0.75"
itertools = "0.10.5"
netlink-packet-core = "=0.7.0"
netlink-packet-route = "=0.17.1"
netlink-packet-sock-diag = "=0.4.2"
netlink-sys = "=0.8.5"
procfs = "0.15.1"
terminal_size = "0.2.6"
unicode-width = "0.1.11"
uzers = { version = "0.11.3", default-features = false, features = ["cache"] }

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.minsize]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
