[package]
name = "lls"
description = "list listening sockets"
version = "0.3.0"
edition = "2021"
authors = ["Julius Michaelis <gitter@liftm.de>"]
repository = "https://github.com/jcaesar/lls"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["listening", "socket", "linux", "cli"]
readme = "README.md"

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.86"
itertools = "0.13.0"
netlink-packet-core = "=0.7.0"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "=0.17.1"
netlink-packet-sock-diag = "=0.4.2"
netlink-packet-wireguard = "0.2.3"
netlink-sys = "=0.8.5"
procfs = "0.16.0"
terminal_size = "0.3.0"
unicode-width = "0.1.13"
uzers = { version = "0.12.1", default-features = false, features = ["cache"] }

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.minsize]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
