[package]
name = "lls"
description = "list listening sockets"
version = "0.4.1"
edition = "2021"
authors = ["Julius Michaelis <gitter@liftm.de>"]
repository = "https://github.com/jcaesar/lls"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["listening", "socket", "linux", "cli"]
readme = "README.md"
rust-version = "1.74"

[dependencies]
anstyle = "1.0.10"
anyhow = "1.0.97"
itertools = "0.14.0"
netlink-packet-core = "=0.7.0"
netlink-packet-generic = "=0.3.3"
netlink-packet-route = "=0.22.0"
netlink-packet-sock-diag = "=0.4.2"
netlink-packet-wireguard = "=0.2.3"
netlink-sys = "=0.8.7"
procfs = "0.17.0"
terminal_size = "0.4.2"
unicode-width = "0.2.0"
uzers = { version = "0.12.1", default-features = false, features = ["cache"] }

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.minsize]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
